# namahage

./: Cargo.toml  README.md
src/: cli.rs  config.rs  errors.rs  faidx.rs  lib.rs  main.rs  validator.rs  vcf.rs
src/validator/: data.rs  global.rs  header.rs  meta_information.rs  record.rs
src/validator/data/: allowed_alternate_base.rs  allowed_reference_base.rs  ambiguous_alternate_base.rs  ambiguous_reference_base.rs  deletion_length.rs  discontiguous_chromosome.rs  identical_bases.rs  insertion_length.rs  mismatch_reference_base.rs  missing_alternate_base.rs  missing_reference_base.rs  multiple_alternate_alleles.rs  position_format.rs  unsorted_position.rs
src/validator/global/: blank_line.rs  data_before_header.rs  empty_vcf.rs
src/validator/header/: duplicated_header.rs  header_column.rs  header_line.rs
src/validator/meta_information/: file_format.rs  version.rs
src/validator/record/: allowed_alternate_base.rs  allowed_reference_base.rs  ambiguous_alternate_base.rs  ambiguous_reference_base.rs  deletion_length.rs  discontiguous_chromosome.rs  (+8 more)
test/: test_NG_JV_VR0001.vcf  test_NG_JV_VR0002.vcf  test_NG_JV_VR0003.vcf  test_NG_JV_VR0004.vcf  test_NG_JV_VR0005.vcf  test_NG_JV_VR0006.vcf  test_NG_JV_VR0007.vcf  test_NG_JV_VR0024.vcf  test_NG_JV_VR0025.vcf  test_NG_JV_VR0026.vcf  test_NG_JV_VR0027.vcf  test_NG_JV_VR0028.vcf  test_NG_JV_VR0029.vcf  test_NG_JV_VR0030.vcf  test_NG_JV_VR0031.vcf  test_NG_JV_VR0034.vcf  test_NG_JV_VR0035.vcf  test_NG_JV_VR0036.vcf  test_NG_JV_VR0037.vcf  test_NG_JV_VR0038.vcf  vcf_spec.4.3.vcf  vcf_spec.4.3.vcf.gz.tbi
