[package]
name = "namahage"
version = "1.0.0-alpha.1"
authors = ["Daisuke Satoh <daisuke.satoh@lifematics.co.jp>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }
vcf2rdf = { git = "https://github.com/togovar/vcf2rdf", branch = "develop" }
