[package]
name = "namahage"
version = "1.0.0-alpha.1"
authors = ["Daisuke Satoh <daisuke.satoh@lifematics.co.jp>"]
edition = "2018"

[dependencies]
env_logger = "0.9"
libc = "0.2"
log = "0.4"
once_cell = "1.8"
regex = "1"
rust-htslib = { version = "0.36", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
strum = { version = "0.20", features = ["derive"] }
tera = "1.0"
thiserror = "1.0"
