[package]
name = "namahage"
version = "1.0.0-alpha.1"
authors = ["Daisuke Satoh <daisuke.satoh@lifematics.co.jp>"]
edition = "2018"

[dependencies]
bgzip = "0.2.2"
env_logger = "0.10.0"
libc = "0.2"
log = "0.4"
once_cell = "1.8"
regex = "1"
rust-htslib = { version = "0.40.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
structopt = "0.3"
strum = { version = "0.24.1", features = ["derive"] }
tera = "1.0"
thiserror = "1.0"
